--- a/index.html
+++ b/index.html
@@ -1,68 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
 <style>
 body {
-    margin: 0;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 15%;
-    background-color: #111111;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
-}
-
-li a {
-    display: block;
-    color: #ffffff;
-    padding: 30px 16px;
-    text-decoration: none;
-    font-size: 20px;
-}
-li a:hover{
-    background-color: #4CAF50;
-}
-div{
-  background-color: #FFB233;
-}
-#a{
-  position: relative;
-  left: 15%;
-}
-#b{
-  position: relative;
-  left: 22.5%;
-}
-#c{
-  position: relative;
-  left: 30%;
-  height: 6%;
-  width: 6%;
-}
-</style>
-</head>
+    background-color:red;
+    }
+    </style>
 <body>
-<nav>
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#student">Student Login</a></li>
-  <li><a href="#parents">Parents Login</a></li>
-  <li><a href="#teachers">Teachers Login</a></li>
-  <li><a href="#admin">Admin</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
-</nav>
-<div>
-  <img id="a" src="images/kvg-logo.png">
-  <img id="b" src="images/kvg LOGO.png">
-  <img id="c" src="images/download.jfif">
-</div>
-</body>
+    <li>home</li>
+    </body>
 </html>
